# graphics-codex.rs

./: Cargo.toml  README.md
assets/models/: sources.txt
examples/: ray_casting.rs  surfaces.rs
src/: camera.rs  color.rs  image.rs  lib.rs  light.rs  math.rs  mesh.rs  obj.rs  point.rs  ray.rs  scene.rs  surfel.rs  triangle.rs
