[package]
name = "graphics-codex"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
description = "An implementation of Morgan McGuire's graphicscodex.com in Rust"
license = "MIT"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
nalgebra = "0.17.2"
rayon = "1.0.3"
tobj = "0.1.6"

[dependencies.sdl2]
version = "0.32.1"
features = ["bundled", "static-link"]
